# CAD_PROJECT

./: .gitignore  BUILD.bazel  G4History.macro  MODULE.bazel  bazel-CAD_PROJECT  bazel-bin  bazel-out  bazel-testlogs  init_vis.mac  run.mac  run.sh  vis.mac
include/: DetectorConstruction.hh  GlobalConfig.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  main.cc
